[package]
name = "iop-rs-ext"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cursive = "0.20.0"
futures = "0.3.29"
futures-util = "0.3.29"
iop-keyvault = "0.0.16"
iop-sdk = "0.0.16"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt", "net", "macros"] }
